chore: add new color variables & convert hsl to oklch

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -24,6 +24,32 @@ body,
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --card-background: var(--card);
+  --card-foreground: var(--card-foreground);
+  --popover-background: var(--popover);
+  --popover-foreground: var(--popover-foreground);
+  --color-primary-50: #fcfcfc;
+  --color-primary-100: #f1f1f2;
+  --color-primary-200: #e0e0e2;
+  --color-primary-300: #c7c7cc;
+  --color-primary-400: #a8a8af;
+  --color-primary-500: #82828b;
+  --color-primary-600: #57575f;
+  --color-primary-700: #27272a;
+  --color-primary-800: #111113;
+  --color-primary-900: #040405;
+  --color-primary-950: #000000;
+  --color-secondary-50: #fefcfc;
+  --color-secondary-100: #fdf2f2;
+  --color-secondary-200: #fae1e1;
+  --color-secondary-300: #f6c7c7;
+  --color-secondary-400: #f1abab;
+  --color-secondary-500: #eb8686;
+  --color-secondary-600: #e45a5a;
+  --color-secondary-700: #dc2828;
+  --color-secondary-800: #7c1414;
+  --color-secondary-900: #400a0a;
+  --color-secondary-950: #2c0707;
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
@@ -32,6 +58,7 @@ body,
   --color-sidebar-accent: var(--sidebar-accent);
   --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
   --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-background: var(--sidebar-background);
   --color-sidebar-foreground: var(--sidebar-foreground);
   --color-sidebar: var(--sidebar);
   --color-chart-5: var(--chart-5);
@@ -43,6 +70,7 @@ body,
   --color-input: var(--input);
   --color-border: var(--border);
   --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
   --color-accent-foreground: var(--accent-foreground);
   --color-accent: var(--accent);
   --color-muted-foreground: var(--muted-foreground);
@@ -63,75 +91,75 @@ body,
 
 :root {
   --radius: 0.5rem;
-  --background: 0 0% 98%;
-  --foreground: 222.2 84% 4.9%;
-  --card: 0 0% 100%;
-  --card-foreground: 222.2 84% 4.9%;
-  --popover: 0 0% 100%;
-  --popover-foreground: 222.2 84% 4.9%;
-  --primary: 221.2 83.2% 53.3%;
-  --primary-foreground: 210 40% 98%;
-  --secondary: 210 40% 96.1%;
-  --secondary-foreground: 222.2 47.4% 11.2%;
-  --muted: 210 40% 96.1%;
-  --muted-foreground: 215.4 16.3% 46.9%;
-  --accent: 210 40% 96.1%;
-  --accent-foreground: 222.2 47.4% 11.2%;
-  --destructive: 0 84.2% 60.2%;
-  --destructive-foreground: 210 40% 98%;
-  --border: 214.3 31.8% 91.4%;
-  --input: 214.3 31.8% 88%;
-  --ring: 221.2 83.2% 53.3%;
+  --background: oklch(98.5%, 0%, 89.876%);
+  --foreground: oklch(13.6%, 9%, 259.201%);
+  --card: oklch(100%, 0%, 89.876%);
+  --card-foreground: oklch(13.6%, 9%, 259.201%);
+  --popover: oklch(100%, 0%, 89.876%);
+  --popover-foreground: oklch(13.6%, 9%, 259.201%);
+  --primary: oklch(54.6%, 53.75%, 262.881%);
+  --primary-foreground: oklch(98.4%, 0.75%, 247.858%);
+  --secondary: oklch(96.8%, 1.75%, 247.896%);
+  --secondary-foreground: oklch(20.8%, 10%, 265.755%);
+  --muted: oklch(96.8%, 1.75%, 247.896%);
+  --muted-foreground: oklch(55.4%, 10.25%, 257.417%);
+  --accent: oklch(96.8%, 1.75%, 247.896%);
+  --accent-foreground: oklch(20.8%, 10%, 265.755%);
+  --destructive: oklch(63.7%, 52%, 25.331%);
+  --destructive-foreground: oklch(98.4%, 0.75%, 247.858%);
+  --border: oklch(92.9%, 3.25%, 255.508%);
+  --input: oklch(90.1%, 4.25%, 256.285%);
+  --ring: oklch(54.6%, 53.75%, 262.881%);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
   --sidebar: oklch(0.985 0 0);
-  --sidebar-background: 0 0% 98%;
-  --sidebar-foreground: 240 5.3% 26.1%;
-  --sidebar-primary: 240 5.9% 10%;
-  --sidebar-primary-foreground: 0 0% 98%;
-  --sidebar-accent: 240 4.8% 95.9%;
-  --sidebar-accent-foreground: 240 5.9% 10%;
-  --sidebar-border: 220 13% 91%;
-  --sidebar-ring: 217.2 91.2% 59.8%;
+  --sidebar-background: oklch(98.5%, 0%, 89.876%);
+  --sidebar-foreground: oklch(37%, 3%, 285.805%);
+  --sidebar-primary: oklch(21%, 1.5%, 285.885%);
+  --sidebar-primary-foreground: oklch(98.5%, 0%, 89.876%);
+  --sidebar-accent: oklch(96.7%, 0.25%, 286.375%);
+  --sidebar-accent-foreground: oklch(21%, 1.5%, 285.885%);
+  --sidebar-border: oklch(92.8%, 1.5%, 264.531%);
+  --sidebar-ring: oklch(62.3%, 47%, 259.815%);
 }
 
 .dark {
-  --background: 222.2 84% 3.9%;
-  --foreground: 210 40% 98%;
-  --card: 222.2 84% 4.9%;
-  --card-foreground: 210 40% 98%;
-  --popover: 222.2 84% 4.9%;
-  --popover-foreground: 210 40% 98%;
-  --primary: 217.2 91.2% 59.8%;
-  --primary-foreground: 222.2 47.4% 11.2%;
-  --secondary: 217.2 32.6% 17.5%;
-  --secondary-foreground: 210 40% 98%;
-  --muted: 217.2 32.6% 17.5%;
-  --muted-foreground: 215 20.2% 65.1%;
-  --accent: 217.2 32.6% 17.5%;
-  --accent-foreground: 210 40% 98%;
-  --destructive: 0 62.8% 30.6%;
-  --destructive-foreground: 210 40% 98%;
-  --border: 217.2 32.6% 17.5%;
-  --input: 217.2 32.6% 15.5%;
-  --ring: 224.3 76.3% 48%;
+  --background: oklch(12.8%, 7.25%, 256.423%);
+  --foreground: oklch(98.4%, 0.75%, 247.858%);
+  --card: oklch(13.6%, 9%, 259.201%);
+  --card-foreground: oklch(98.4%, 0.75%, 247.858%);
+  --popover: oklch(13.6%, 9%, 259.201%);
+  --popover-foreground: oklch(98.4%, 0.75%, 247.858%);
+  --primary: oklch(62.3%, 47%, 259.815%);
+  --primary-foreground: oklch(20.8%, 10%, 265.755%);
+  --secondary: oklch(27.9%, 9.25%, 260.031%);
+  --secondary-foreground: oklch(98.4%, 0.75%, 247.858%);
+  --muted: oklch(27.9%, 9.25%, 260.031%);
+  --muted-foreground: oklch(71.1%, 8.75%, 256.788%);
+  --accent: oklch(27.9%, 9.25%, 260.031%);
+  --accent-foreground: oklch(98.4%, 0.75%, 247.858%);
+  --destructive: oklch(39.6%, 33.25%, 25.723%);
+  --destructive-foreground: oklch(98.4%, 0.75%, 247.858%);
+  --border: oklch(27.9%, 9.25%, 260.031%);
+  --input: oklch(26%, 8.25%, 261.63%);
+  --ring: oklch(48.8%, 54.25%, 264.376%);
   --chart-1: oklch(0.488 0.243 264.376);
   --chart-2: oklch(0.696 0.17 162.48);
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
   --sidebar: oklch(0.205 0 0);
-  --sidebar-background: 240 5.9% 10%;
-  --sidebar-foreground: 240 4.8% 95.9%;
-  --sidebar-primary: 224.3 76.3% 48%;
-  --sidebar-primary-foreground: 0 0% 100%;
-  --sidebar-accent: 240 3.7% 15.9%;
-  --sidebar-accent-foreground: 240 4.8% 95.9%;
-  --sidebar-border: 240 3.7% 15.9%;
-  --sidebar-ring: 217.2 91.2% 59.8%;
+  --sidebar-background: oklch(21%, 1.5%, 285.885%);
+  --sidebar-foreground: oklch(96.7%, 0.25%, 286.375%);
+  --sidebar-primary: oklch(48.8%, 54.25%, 264.376%);
+  --sidebar-primary-foreground: oklch(100%, 0%, 89.876%);
+  --sidebar-accent: oklch(27.4%, 1.25%, 286.033%);
+  --sidebar-accent-foreground: oklch(96.7%, 0.25%, 286.375%);
+  --sidebar-border: oklch(27.4%, 1.25%, 286.033%);
+  --sidebar-ring: oklch(62.3%, 47%, 259.815%);
 }
 
 .dashboard-container {
